welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:13: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
		return Color.green;
                             ^